--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
         "moment": "^2.26.0",
         "next": "^9.4.0",
         "nprogress": "^0.2.0",
+        "query-string": "^6.13.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-quill": "^1.3.5",
