contact user/admin, google signin, static front-page

--- a/backend/.env
+++ b/backend/.env
@@ -2,5 +2,11 @@ NODE_ENV=development
 APP_NAME=SEOBLOG
 PORT=8000
 CLIENT_URL=http://localhost:3000
-DATABASE='mongodb://localhost:27017/seoblog'
+DATABASE_LOCAL='mongodb://localhost:27017/seoblog'
 JWT_SECRET=OHJKOBMDFKGMOGM6505BB8940T8BUDF8EWRFDF9ER8E
+SENDGRID_API_KEY=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
+EMAIL_TO=sureshjangale137@gmail.com
+JWT_ACCOUNT_ACTIVATION=8924Y3UH328Y389239RU3Y2G8823R9HU
+EMAIL_FROM=noreply@seoblog.com
+JWT_RESET_PASSWORD=034957439HIU34R9U43H034OR3H49UH4390P0IH
+GOOGLE_CLIENT_ID=1021829324386-a27pcdqbamdtpkni02k1qu9v7a3i2bbl.apps.googleusercontent.com
