--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@sendgrid/mail": "^7.2.0",
         "body-parser": "^1.19.0",
         "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
@@ -18,6 +19,7 @@
         "express-jwt": "^5.3.3",
         "express-validator": "^6.4.1",
         "formidable": "^1.2.2",
+        "google-auth-library": "^6.0.2",
         "jsonwebtoken": "^8.5.1",
         "lodash": "^4.17.15",
         "mongoose": "^5.9.14",
